--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -214,28 +214,131 @@
                 </div>
             </div>
         </section>
-        <section class="hero is-primary is-bold is-small">
-            <div class="hero-body">
-                <div class="container has-text-centered">
-                    <p class="title"><strong>~ Bot Information ~</strong></p>
-                    <br>
+        <section class="section">
+            <div class="container has-text-centered box">
+                <div class="heading">
+                    <h1 class="title">Development team</h1>
+                    <h2 class="subtitle">Those who have created the bot</h2>
+                </div>
 
-                    <nav class="columns">
-                        <div class="column">
-                            <p class="heading"><strong>Total Server<%= rawServerCount == 1 ? "" : "s" %></strong></p>
-                            <p class="title is-2"><%= rawServerCount %></p>
+                <br><br><br>
+                <div class="columns">
+                    <div class="column">
+                        <div class="box">
+                            <article class="media">
+                                <div class="media-left">
+                                    <figure class="image is-64x64"><img src="https://oskikiboy.me/img/icon.png">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <div class="content">
+                                        <p>
+                                            <strong>oskikiboy</strong>
+                                            <small>@oskikiboy#1133</small>
+                                            <span class="tag is-primary is-small">Project Founder</span>
+                                            <span class="tag is-success is-small">Front end Developer</span>
+                                            <span class="tag is-success is-small">Back end Developer</span>
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
                         </div>
-
-                        <div class="column">
-                            <p class="heading"><strong>Total User<%= rawUserCount == 1 ? "" : "s" %></strong></p>
-                            <p class="title is-2"><%= rawUserCount %></p>
+                        <div class="box">
+                            <article class="media">
+                                <div class="media-left">
+                                    <figure class="image is-64x64"><img src="https://cdn.discordapp.com/avatars/229232856063410176/95b68e024bf41e0d5761447c4557bb1c.png?size=2048">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <div class="content">
+                                        <p>
+                                            <strong>motasim</strong>
+                                            <small>@motasim#4036</small>
+                                            <span class="tag is-dark is-small">Project Lead</span>
+                                            <span class="tag is-success is-small">Front end Developer</span>
+                                            <span class="tag is-success is-small">Back end Developer</span>
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
                         </div>
-
-                        <div class="column">
-                            <p class="heading"><strong>Instance Uptime</strong></p>
-                            <p class="title is-2"><%= roundedUptime %></p>
+                        <div class="box">
+                            <article class="media">
+                                <div class="media-left">
+                                    <figure class="image is-64x64"><img src="https://cdn.discordapp.com/avatars/239738897985175552/8e28a509823eb5f5978ffb87fab728fa.png?size=2048">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <div class="content">
+                                        <p>
+                                            <strong>Cringy Adam</strong>
+                                            <small>@Cringy Adam#4611</small>
+                                            <span class="tag is-dark is-small">Project Lead</span>
+                                            <span class="tag is-success is-small">Back end Developer</span>
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
                         </div>
-                    </nav>
+                        <div class="box">
+                            <article class="media">
+                                <div class="media-left">
+                                    <figure class="image is-64x64"><img src="https://cdn.discordapp.com/avatars/210683612369125386/3539947c07374b11e8d9035d7e80bba0.png?size=2048">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <div class="content">
+                                        <p>
+                                            <strong>haxmat</strong>
+                                            <small>@haxmat#2439</small>
+                                            <span class="tag is-success is-small">Front end Developer</span>
+                                            <span class="tag is-success is-small">Back end Developer</span>
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="box">
+                            <article class="media">
+                                <div class="media-left">
+                                    <figure class="image is-64x64"><img src="https://cdn.discordapp.com/avatars/321193377951645699/610f7037f28820e75694cb621ff1927e.png?size=2048">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <div class="content">
+                                        <p>
+                                            <strong>Blackberry pi</strong>
+                                            <small>@Blackberry pi#6618</small>
+                                            <span class="tag is-success is-small">Back end Developer</span>
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="box">
+                            <article class="media">
+                                <div class="media-left">
+                                    <figure class="image is-64x64"><img src="https://cdn.discordapp.com/avatars/236002091120721930/a_a5bb1694dcb429c3678b3766de5fe545.gif?size=2048">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <div class="content">
+                                        <p>
+                                            <strong>Codefox</strong>
+                                            <small>@Codefox#0953</small>
+                                            <span class="tag is-success is-small">Back end Developer</span>
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
