--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -214,6 +214,31 @@
                 </div>
             </div>
         </section>
+        <section class="hero is-primary is-bold is-small">
+            <div class="hero-body">
+                <div class="container has-text-centered">
+                    <p class="title"><strong>~ Bot Information ~</strong></p>
+                    <br>
+
+                    <nav class="columns">
+                        <div class="column">
+                            <p class="heading"><strong>Total Server</strong></p>
+                            <p class="title is-2"><%= guildamount %></p>
+                        </div>
+
+                        <div class="column">
+                            <p class="heading"><strong>Total User amount</strong></p>
+                            <p class="title is-2"><%= useramount %></p>
+                        </div>
+
+                        <div class="column">
+                            <p class="heading"><strong>Instance Uptime</strong></p>
+                            <p class="title is-2"><%= botuptime %></p>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </section>
         <section class="section">
             <div class="container has-text-centered box">
                 <div class="heading">
