--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -222,7 +222,7 @@
 
                     <nav class="columns">
                         <div class="column">
-                            <p class="heading"><strong>Total Server</strong></p>
+                            <p class="heading"><strong>Total Servers</strong></p>
                             <p class="title is-2"><%= guildamount %></p>
                         </div>
 
