--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -272,6 +272,26 @@
                         <div class="box">
                             <article class="media">
                                 <div class="media-left">
+                                    <figure class="image is-64x64"><img src="https://cdn.discordapp.com/avatars/210683612369125386/3539947c07374b11e8d9035d7e80bba0.png?size=2048">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <div class="content">
+                                        <p>
+                                            <strong>haxmat</strong>
+                                            <small>@haxmat#2439</small>
+                                            <span class="tag is-primary is-small">Project Head</span>
+                                            <span class="tag is-success is-small">Front end Developer</span>
+                                            <span class="tag is-success is-small">Back end Developer</span>
+                                            <br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="box">
+                            <article class="media">
+                                <div class="media-left">
                                     <figure class="image is-64x64"><img src="https://cdn.discordapp.com/avatars/229232856063410176/95b68e024bf41e0d5761447c4557bb1c.png?size=2048">
                                     </figure>
                                 </div>
@@ -301,25 +321,6 @@
                                             <strong>Cringy Adam</strong>
                                             <small>@Cringy Adam#4611</small>
                                             <span class="tag is-dark is-small">Project Lead</span>
-                                            <span class="tag is-success is-small">Back end Developer</span>
-                                            <br>
-                                        </p>
-                                    </div>
-                                </div>
-                            </article>
-                        </div>
-                        <div class="box">
-                            <article class="media">
-                                <div class="media-left">
-                                    <figure class="image is-64x64"><img src="https://cdn.discordapp.com/avatars/210683612369125386/3539947c07374b11e8d9035d7e80bba0.png?size=2048">
-                                    </figure>
-                                </div>
-                                <div class="media-content">
-                                    <div class="content">
-                                        <p>
-                                            <strong>haxmat</strong>
-                                            <small>@haxmat#2439</small>
-                                            <span class="tag is-success is-small">Front end Developer</span>
                                             <span class="tag is-success is-small">Back end Developer</span>
                                             <br>
                                         </p>
