--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -29,7 +29,7 @@
         <script src="https://use.fontawesome.com/85986a92d7.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="/js/particles.js"></script>
-        <script src="http://bulma.io/javascript/bulma.js"></script>
+        <script src="/js/bulma.js"></script>
     </head>
     <style type="text/css">
 
@@ -142,7 +142,7 @@
                                 </span>
                                 <span>Support</span>
                             </a>
-                            <a class="button is-dark" href="https://discordapp.com/oauth2/authorize?client_id=321209275164655616&scope=bot&p ermissions=470019135">
+                            <a class="button is-dark" href="https://discordapp.com/oauth2/authorize?client_id=295942672890331147&scope=bot&permissions=2146958463">
                                 <span class="icon">
                                     <i class="fa fa-plus"></i>
                                 </span>
@@ -159,6 +159,7 @@
                         <a class="nav-item is-tab is-hidden-tablet is-active">Home</a>
                         <a class="nav-item is-tab is-hidden-tablet" href="wip">Documentation</a>
                         <a class="nav-item is-tab is-hidden-tablet" href="blog">Blog</a>
+                        <a class="nav-item is-tab is-hidden-tablet" href="blog">add</a>
                     </div>
                 </nav>
             </div>
