--- a/web/views/blog.ejs
+++ b/web/views/blog.ejs
@@ -29,8 +29,8 @@
         <script src="https://use.fontawesome.com/85986a92d7.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="/js/miny-part/particles.js"></script>
-        <script src="http://bulma.io/javascript/bulma.js"></script>
         <script src="/js/bulma.js"></script>
+        <script src="/js/blog.js"></script>
     </head>
     <style type="text/css">
 
