--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -101,67 +101,7 @@
         </div>
         <section class="hero is-dark is-fullheight banner" style="z-index: -5;">
             <div class="hero-head">
-                <nav class="nav has-shadow">
-                    <div class="nav-left">
-                        <a class="nav-item"  href="https://discordapp.com/invite/JJAy6qw">
-                            <img src="/img/icon.png" alt="Logo" style="border-radius: 4px;"> &nbsp;
-                            <span>TerraBite</span> 
-                        </a>
-                    </div>
-                    <div class="nav-center">
-                        <a class="nav-item" href="https://discordapp.com/invite/JJAy6qw">
-                            <span class="icon">
-                                <i class="fa socicon-discord"></i>
-                            </span>
-                        </a>
-                        <a class="nav-item" href="wip.html">
-                            <span class="icon">
-                                <i class="fa fa-check"></i>
-                            </span>
-                        </a>
-                        <a class="nav-item" href="https://github.com/TerraBite-Development-Team/TerraBite">
-                            <span class="icon">
-                                <i class="fa fa-github" style="padding-top: 2px;"></i>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="nav-right nav-menu">
-                        <a class="nav-item is-active">
-                            Home
-                        </a>
-                        <a class="nav-item" href="wip">
-                            Documentation
-                        </a>
-                        <a class="nav-item" href="blog">
-                            Blog
-                        </a>
-                        <span class="nav-item">
-                            <a class="button is-info is-outlined" href="https://discordapp.com/invite/JJAy6qw">
-                                <span class="icon">
-                                    <i class="fa fa-handshake-o"></i>
-                                </span>
-                                <span>Support</span>
-                            </a>
-                            <a class="button is-dark" href="https://discordapp.com/oauth2/authorize?client_id=295942672890331147&scope=bot&permissions=2146958463">
-                                <span class="icon">
-                                    <i class="fa fa-plus"></i>
-                                </span>
-                                <span>Add</span>
-                            </a>
-                        </span>
-                    </div>
-                    <span class="nav-toggle" id="nav-toggle">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </span>
-                    <div id="nav-menu" class="nav-right nav-menu is-hidden-tablet">
-                        <a class="nav-item is-tab is-hidden-tablet is-active">Home</a>
-                        <a class="nav-item is-tab is-hidden-tablet" href="wip">Documentation</a>
-                        <a class="nav-item is-tab is-hidden-tablet" href="blog">Blog</a>
-                        <a class="nav-item is-tab is-hidden-tablet" href="blog">add</a>
-                    </div>
-                </nav>
+                <% include ../partials/nav %>
             </div>
             <div class="hero-body">
                 <div id="container" style="z-index: 50;position: absolute;" class="is-hidden-mobile">
