--- a/web/views/blog.ejs
+++ b/web/views/blog.ejs
@@ -104,7 +104,7 @@
         </div>
         <section class="hero is-dark is-medium banner" style="z-index: -5;">
             <div class="hero-head">
-                <% include ../partials/nav %>
+                <% include ./partials/nav %>
             </div>
             <div class="hero-body">
                 <div id="container" style="z-index: 50;position: absolute;" class="is-hidden-mobile">
