--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -101,7 +101,7 @@
         </div>
         <section class="hero is-dark is-fullheight banner" style="z-index: -5;">
             <div class="hero-head">
-                <% include ../partials/nav %>
+                <% include ./partials/nav %>
             </div>
             <div class="hero-body">
                 <div id="container" style="z-index: 50;position: absolute;" class="is-hidden-mobile">
@@ -125,9 +125,9 @@
                     <nav class="columns">
                         <a class="column has-text-centered">
                             <span class="icon is-large">
-                                <i class="fa fa-question-circle"></i>
+                                <i class="fa fa-controler"></i>
                             </span>
-                            <p class="title is-4"><strong>null</strong></p>
+                            <p class="title is-4"><strong>Great Fun!</strong></p>
                             <p class="subtitle">null</p>
                         </a>
                         <a class="column has-text-centered">
