--- a/web/views/partials/nav.ejs
+++ b/web/views/partials/nav.ejs
@@ -11,7 +11,7 @@
                 <i class="fa socicon-discord"></i>
             </span>
         </a>
-        <a class="nav-item" href="wipl>
+        <a class="nav-item" href="wip">
             <span class="icon">
                 <i class="fa fa-check"></i>
             </span>
@@ -22,8 +22,8 @@
             </span>
         </a>
     </div>
-    <div class="nav-right nav-menu" id="nav-">
-        <a class="nav-item is-active">
+    <div class="nav-right nav-menu">
+        <a class="nav-item is-active" id="nav-" href="/">
             Home
         </a>
         <a class="nav-item is-active" href="wip" id="nav-docs">
