--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -125,26 +125,26 @@
                     <nav class="columns">
                         <a class="column has-text-centered">
                             <span class="icon is-large">
-                                <i class="fa fa-controler"></i>
+                                <i class="fa fa-gamepad"></i>
                             </span>
                             <p class="title is-4"><strong>Great Fun!</strong></p>
-                            <p class="subtitle">null</p>
+                            <p class="subtitle">Coinflip, Fortune, 8ball and More!</p>
                         </a>
                         <a class="column has-text-centered">
                             <span class="icon is-large">
-                                <i class="fa fa-question-circle"></i>
+                                <i class="fa fa-gavel"></i>
                             </span>
-                            <p class="title is-4"><strong>null</strong></p>
-                            <p class="subtitle">null</p>
+                            <p class="title is-4"><strong>Moderation</strong></p>
+                            <p class="subtitle">Purge, Kick, Ban, Warn</p>
                         </a>
                         <a class="column has-text-centered">
                             <span class="icon is-large">
-                                <i class="fa fa-question-circle"></i>
+                                <i class="fa fa-info-circle"></i>
                             </span>
-                            <p class="title is-4"><strong>null</strong></p>
-                            <p class="subtitle">null</p>
+                            <p class="title is-4"><strong>Information</strong></p>
+                            <p class="subtitle">Weather, Stats, Userinfo, Uptime</p>
                         </a>
-                        <a class="column has-text-centered">
+                        <a class="column has-text-centered" href="<%= support %>">
                             <span class="icon is-large">
                                 <i class="fa socicon-discord"></i>
                             </span>
@@ -200,7 +200,7 @@
                                     <div class="content">
                                         <p>
                                             <strong>oskikiboy</strong>
-                                            <small>@oskikiboy#1133</small>
+                                            <small>@oskikiboy#5467</small>
                                             <span class="tag is-primary is-small">Project Founder</span>
                                             <span class="tag is-success is-small">Front end Developer</span>
                                             <span class="tag is-success is-small">Back end Developer</span>
