--- a/web/views/blog.ejs
+++ b/web/views/blog.ejs
@@ -143,6 +143,8 @@
                 </div>
             </div>
         </section>
+        <% include ./partials/foot %>
+        <% include ./partials/up %>
         <script src="/js/miny-part/app.js"></script>
     </body>
 </html>
