--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -40,14 +40,15 @@
             background-image: url('');
             background-repeat: no-repeat;
         }
+
         .particles-js-canvas-el {
-            top: 0;  
+            top: 0;
             left: 0;
         }
 
         .banner {
-            background: -webkit-linear-gradient(45deg, rgba(35,50,59,1) 0%, rgba(95,88,128,1) 100%);
-            background: linear-gradient(45deg, rgba(35,50,59,1) 0%, rgba(95,88,128,1) 100%);
+            background: -webkit-linear-gradient(45deg, rgba(35, 50, 59, 1) 0%, rgba(95, 88, 128, 1) 100%);
+            background: linear-gradient(45deg, rgba(35, 50, 59, 1) 0%, rgba(95, 88, 128, 1) 100%);
         }
 
         /*CSS by Inventor02*/
@@ -77,7 +78,6 @@
             min-width: 900px;
             min-height: 330px;
         }
-
 
         #logo {
             height: 150px;
@@ -180,14 +180,17 @@
                 </div>
             </div>
         </section>
-        <section class="section">
+        <section class="hero is-black">
+            <br>
             <div class="container has-text-centered box">
                 <div class="heading">
-                    <h1 class="title">Development team</h1>
-                    <h2 class="subtitle">Those who have created the bot</h2>
+                    <h1 class="title" style="color:#363636;">Development team</h1>
+                    <div style="padding: -40px">
+                        <hr>
+                    </div>
+                    <h2 class="subtitle" style="color:#363636;"><i>Those who have created the bot</i></h2>
                 </div>
-
-                <br><br><br>
+                <br><br>
                 <div class="columns">
                     <div class="column">
                         <div class="box">
@@ -213,7 +216,8 @@
                         <div class="box">
                             <article class="media">
                                 <div class="media-left">
-                                    <figure class="image is-64x64"><img src="https://cdn.discordapp.com/avatars/210683612369125386/3539947c07374b11e8d9035d7e80bba0.png?size=2048">
+                                    <figure class="image is-64x64"><img
+                                                                        src="https://cdn.discordapp.com/avatars/210683612369125386/3539947c07374b11e8d9035d7e80bba0.png?size=2048">
                                     </figure>
                                 </div>
                                 <div class="media-content">
@@ -233,7 +237,8 @@
                         <div class="box">
                             <article class="media">
                                 <div class="media-left">
-                                    <figure class="image is-64x64"><img src="https://cdn.discordapp.com/avatars/229232856063410176/95b68e024bf41e0d5761447c4557bb1c.png?size=2048">
+                                    <figure class="image is-64x64"><img
+                                                                        src="https://cdn.discordapp.com/avatars/229232856063410176/95b68e024bf41e0d5761447c4557bb1c.png?size=2048">
                                     </figure>
                                 </div>
                                 <div class="media-content">
@@ -253,7 +258,8 @@
                         <div class="box">
                             <article class="media">
                                 <div class="media-left">
-                                    <figure class="image is-64x64"><img src="https://cdn.discordapp.com/avatars/239738897985175552/8e28a509823eb5f5978ffb87fab728fa.png?size=2048">
+                                    <figure class="image is-64x64"><img
+                                                                        src="https://cdn.discordapp.com/avatars/239738897985175552/8e28a509823eb5f5978ffb87fab728fa.png?size=2048">
                                     </figure>
                                 </div>
                                 <div class="media-content">
@@ -272,7 +278,8 @@
                         <div class="box">
                             <article class="media">
                                 <div class="media-left">
-                                    <figure class="image is-64x64"><img src="https://cdn.discordapp.com/avatars/321193377951645699/610f7037f28820e75694cb621ff1927e.png?size=2048">
+                                    <figure class="image is-64x64"><img
+                                                                        src="https://cdn.discordapp.com/avatars/321193377951645699/610f7037f28820e75694cb621ff1927e.png?size=2048">
                                     </figure>
                                 </div>
                                 <div class="media-content">
@@ -290,7 +297,8 @@
                         <div class="box">
                             <article class="media">
                                 <div class="media-left">
-                                    <figure class="image is-64x64"><img src="https://cdn.discordapp.com/avatars/236002091120721930/a_a5bb1694dcb429c3678b3766de5fe545.gif?size=2048">
+                                    <figure class="image is-64x64"><img
+                                                                        src="https://cdn.discordapp.com/avatars/236002091120721930/a_a5bb1694dcb429c3678b3766de5fe545.gif?size=2048">
                                     </figure>
                                 </div>
                                 <div class="media-content">
@@ -309,6 +317,8 @@
                 </div>
             </div>
         </section>
+        <% include ./partials/foot %>
+        <% include ./partials/up %>
         <script src="/js/app.js"></script>
     </body>
 </html>
