--- a/web/views/partials/foot.ejs
+++ b/web/views/partials/foot.ejs
@@ -1,16 +1,14 @@
-<footer>
+<div class="footer">
     <div class="container">
         <br><br>
         <div class="content has-text-centered">
-            <p>
                 <strong>TerraBite</strong> by the TerraBite Development Group, merged/based off Timiki by Haxmat. Made with <a href="https://nodejs.org/en/">Node.js</a> and <a href="https://discord.js.org/">Discord.JS</a>. Site made with <a href="http://bulma.io/">Bulma</a>, <a href="https://jquery.com/">jQuery</a> and <a href="http://fontawesome.io/">Font Awesome</a>. Particles-JS by <a href="http://vincentgarreau.com/en">Vincent Garreau</a>. Artwork by <a href="https://oskikiboy.me/">oskikiboy</a>. Source licensed under <a href="https://github.com/TerraBite-Development-Team/TerraBite/blob/development/LICENSE">MIT</a>.
                 <br>
-            </p>
             <p>
                 <a class="icon" href="https://discord.gg/NZwzJ9Q" style="padding-top: 3px;">
                     <i class="fa icon-discord"></i>
                 </a>
-                <a class="icon" href="https://discordapp.com/invite/JJAy6qw">
+                <a class="icon" href="https://github.com/TerraBite-Development-Team/TerraBite">
                     <i class="fa fa-github"></i>
                 </a>
                 <a class="icon" href="wip">
@@ -20,4 +18,4 @@
         </div>
         <br>
     </div>
-</footer>
+</div>
