--- a/web/views/partials/foot.ejs
+++ b/web/views/partials/foot.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <br><br>
         <div class="content has-text-centered">
-                <strong>TerraBite</strong> by the TerraBite Development Group, merged/based off Timiki by Haxmat. Made with <a href="https://nodejs.org/en/">Node.js</a> and <a href="https://discord.js.org/">Discord.JS</a>. Site made with <a href="http://bulma.io/">Bulma</a>, <a href="https://jquery.com/">jQuery</a> and <a href="http://fontawesome.io/">Font Awesome</a>. Particles-JS by <a href="http://vincentgarreau.com/en">Vincent Garreau</a>. Artwork by <a href="https://oskikiboy.me/">oskikiboy</a>. Source licensed under <a href="https://github.com/TerraBite-Development-Team/TerraBite/blob/development/LICENSE">MIT</a>.
+                <strong>TerraBite</strong> by the TerraBite Development Group, merged/based off Timiki by Haxmat. Made with <a href="https://nodejs.org/en/">Node.js</a> and <a href="https://discord.js.org/">Discord.JS</a>. Site made with <a href="http://bulma.io/">Bulma</a>, <a href="http://fontawesome.io/">Font Awesome</a> and Particles-JS by <a href="http://vincentgarreau.com/en">Vincent Garreau</a>. Artwork by <a href="https://oskikiboy.me/">oskikiboy</a>. Source licensed under <a href="https://github.com/TerraBite-Development-Team/TerraBite/blob/development/LICENSE">MIT</a>.
                 <br>
             <p>
                 <a class="icon" href="https://discord.gg/NZwzJ9Q" style="padding-top: 3px;">
