--- a/web/views/error.ejs
+++ b/web/views/error.ejs
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TerraBite &bull; WIP</title>
+        <title>TerraBite &bull; Error</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="oskikiboy">
-        <meta name="description" content="WIP">
+        <meta name="description" content="Error">
 
         <meta property="og:type" content="website">
         <meta property="og:title" content="TerraBite">
         <meta property="og:image" content="assets/img/icon.png">
-        <meta property="og:description" content="WIP">
+        <meta property="og:description" content="Error">
 
         <meta name="twitter:title" content="TerraBite">
         <meta name="twitter:image" content="assets/img/icon.png">
-        <meta name="twitter:description" content="WIP">
+        <meta name="twitter:description" content="Error">
 
         <link rel="shortcut icon" type="image/png" href="/img/icon.png">
         <meta name="theme-color" content="#551A8B">
