--- a/web/views/maintenance.ejs
+++ b/web/views/maintenance.ejs
@@ -54,13 +54,12 @@
             <h1 class="subtitle is-1">Maintenance</h1>
             <br>
             <h1 class="title is-1">
-                <%= message %> <br>
+                <%= message %>
             </h1>
             <br>
             <hr>
             <br>
             <h2 class="title">Come back later</h2>
-
         </div>
     </div>
 </section>
