--- a/web/views/partials/foot.ejs
+++ b/web/views/partials/foot.ejs
@@ -1,19 +1,31 @@
-<div class="footer">
-        <br><br>
+<footer class="footer">
+    <div class="container">
         <div class="content has-text-centered">
+            <p>
                 <strong>TerraBite</strong> by the TerraBite Development Group, merged/based off Timiki by Haxmat. Made with <a href="https://nodejs.org/en/">Node.js</a> and <a href="https://discord.js.org/">Discord.JS</a>. Site made with <a href="http://bulma.io/">Bulma</a>, <a href="http://fontawesome.io/">Font Awesome</a> and Particles-JS by <a href="http://vincentgarreau.com/en">Vincent Garreau</a>. Artwork by <a href="https://oskikiboy.me/">oskikiboy</a>. Source licensed under <a href="https://github.com/TerraBite-Development-Team/TerraBite/blob/development/LICENSE">MIT</a>.
                 <br>
-            <p>
-                <a class="icon" href="https://discord.gg/NZwzJ9Q" style="padding-top: 3px;">
-                    <i class="fa icon-discord"></i>
+                <br>
+                Copyright © The TerraBite Development Group, 2017. All rights reserved.
+                <br>
+                <a href="/paperwork">Privacy Policy</a>
+            </p>
+            <div>
+                <a class="icon" href="https://discord.gg/NZwzJ9Q" style="bottom: 3px">
+                    <span>
+                    <i class="fa socicon-discord"></i>
+                    </span>
                 </a>
                 <a class="icon" href="https://github.com/TerraBite-Development-Team/TerraBite">
+                    <span>
                     <i class="fa fa-github"></i>
+                    </span>
                 </a>
                 <a class="icon" href="wip">
+                    <span class="icon " style="padding-bottom: 6px">
                     <i class="fa fa-check"></i>
+                    </span>
                 </a>
-            </p>
+            </div>
         </div>
-        <br>
-</div>
+    </div>
+</footer>
