--- a/web/views/policy.ejs
+++ b/web/views/policy.ejs
@@ -55,7 +55,7 @@
                             <i class="fa fa-globe"></i>
                         </span> Tracking information
                         <br>
-                        Our service, "TerraBite", stores bits of information about you in your browsed called "cookies". These cookies are used to identify and authenticate you. Our domain proxy and CDN, CloudFlare, is a third party that installs cookies in your browser to make sure your sessions can be matched with your browser, even though your browser only connects with CloudFlare and not directly to our servers.
+                        Our service, "TerraBite", stores bits of information about you in your browser called "cookies". These cookies are used to identify and authenticate you. Our domain proxy and CDN, CloudFlare, is a third party that installs cookies in your browser to make sure your sessions can be matched with your browser, even though your browser only connects with CloudFlare and not directly to our servers.
                     </p>
                     <br>
                     <p class="control">
