--- a/web/views/blog.ejs
+++ b/web/views/blog.ejs
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container is-hidden-tablet has-text-centered">
+                <div class="container is-hidden-tablet">
                     <h1 class="title is-1">TerraBite</h1>
                     <h2 class="subtitle is-4">The Official <strong>TerraBite</strong> blog.</h2>
                 </div>
