--- a/web/views/partials/nav.ejs
+++ b/web/views/partials/nav.ejs
@@ -1,6 +1,8 @@
-<nav class="nav has-shadow">
+<nav class="nav has-shadow" style="background-color:rgba(0,0,0,0.29)">
+    &nbsp;
+    &nbsp;
     <div class="nav-left">
-        <a class="nav-item" href="https://discordapp.com/invite/JJAy6qw">
+        <a class="nav-item is-brand" href="https://discordapp.com/invite/JJAy6qw">
             <img src="/img/icon.png" alt="Logo" style="border-radius: 4px;"> &nbsp;
             <span>TerraBite</span>
         </a>
@@ -39,7 +41,7 @@
                 </span>
                 <span>Add</span>
             </a>
-            <a class="button is-dark is-outlined" href="<%= support %>" style="margin-left: 0px;">
+            <a class="button is-info is-outlined is-iverted" href="<%= support %>" style="margin-left: 0px;">
                 <span class="icon is-small">
                     <i class="fa fa-handshake-o"></i>
                 </span>
